---------------------------------------------------------------------------------------------------
Version: 2.10.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.10.3
Date: 2025-11-21
  Bugfixes:
    - Fixed not being able to take a blueprint of a stage that includes tiles but all entities are _filtered out_.
---------------------------------------------------------------------------------------------------
Version: 2.10.2
Date: 2025-11-20
  Bugfixes:
    - Fixed space platform hubs not being present when a stage is inserted at the front.
    - Fixed on spaceships, that extra space platform may be present when inserting a stage.
    - Fixed that tiles may sometimes not be fixed when rebuilding a stage.
    - Fixed that importing a space platform project would use normal world surfaces instead.
    - Fixed that creating a platform with a quality starter pack would not create a quality platform... as if anyone would want to do that
    - Fixed not being able to take a blueprint of a stage that includes tiles but not entities.
---------------------------------------------------------------------------------------------------
Version: 2.10.1
Date: 2025-11-18
  Bugfixes:
    - Editing blueprint filters with entities no longer present in active mods no longer crashes the UI.
---------------------------------------------------------------------------------------------------
Version: 2.10.0
Date: 2025-11-17
  Features:
    - You can now copy an entity with item requests, in a project. This can be toggled under a new setting.
---------------------------------------------------------------------------------------------------
Version: 2.9.1
Date: 2025-11-16
  Features:
    - Staged copy and Staged cut now also copy custom item requests!
---------------------------------------------------------------------------------------------------
Version: 2.9.0
Date: 2025-11-16
  Features: